2011-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use bundled woe/ucontext.h for cygwin.

	* configure.ac (NEED_WOE_UCONTEXT_H): New ‘RCS_CBOOL’.
	* AUTHORS: Add Panagiotis E. Hadjidoukas.

2011-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.96

2011-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Make pic(1) configurable via configure arg var.

	* configure.ac (PIC): New AC_ARG_VAR.
	(PIC): Conditionalize this AC_CHECK_PROGS on
	empty arg var ‘PIC’; add proper m4-quoting.

2011-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Decruft: Don't generate unused .version file.

	* Makefile.am (BUILT_SOURCES): Delete var.
	($(top_srcdir)/.version): Delete target.

2011-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Enable "intra-version strings".

	* Makefile.am (BUILT_SOURCES): New var.
	($(top_srcdir)/.version): New target.
	(dist-hook): Also write version to
	build-aux/.version in $(distdir).
	* configure.ac (AC_INIT): Don't hardcode package
	version; instead, run git-version-gen to compute it.
	(AM_INIT_AUTOMAKE): Remove option ‘gnits’.

2011-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘git-version-gen’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘git-version-gen’.

2011-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Make soelim(1) user-configurable.

	* configure.ac (SOELIM): New AC_ARG_VAR.
	(SOELIM): New AC_CHECK_PROGS, conditionalized on the AC_ARG_VAR.

2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.95

	* configure.ac (AC_INIT): Bump version to "5.7.95" for release.

2010-11-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Factor ‘-m’ description.

	* doc/rcs.texi (Common elements):
	Add "Log message option" to menu.
	(Log message option): New node/subsection.
	(ci, rcs): Add xref to "Log message option".

2010-11-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Place rcs.texi in dir category "Version control".

	* doc/rcs.texi (@dircategory): Use "Version control".